--- a/index.html
+++ b/index.html
@@ -15,14 +15,23 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
     <title>Présentation Formation DWWM</title>
   </head>
   <body>
-    <div class="text-center my-5">
-      <img id="logo" src="assets/img/logo-afpa.webp" />
+    <div id="fondafpa">
+      <img
+        id="logo2"
+        class="d-lg-none d-sm-block"
+        src="assets/img/logo-afpa.webp"
+      />
     </div>
     <nav class="navbar navbar-expand-lg barredenav">
-      <div class="container-fluid">
+      <div class="container-fluid text-center">
         <a class="navbar-brand" href="#"></a>
         <button
           class="navbar-toggler test border border-3 collapsed"
@@ -38,16 +47,25 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="container-fluid navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Accueil</a>
+              <a
+                class="nav-link d-lg-block d-sm-none"
+                aria-current="page"
+                href="#"
+              >
+                <img
+                  id="logo"
+                  src="assets/img/logo-afpa.webp"
+                  href="index.html"
+              /></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Entrees</a>
+            <li class="nav-item burger">
+              <a class="nav-link" href="views/Formation.html">Formation DWWM</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Plats</a>
+            <li class="nav-item burger">
+              <a class="nav-link" href="views/Contact.html">Contact</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link">Desserts</a>
+            <li class="nav-item burger">
+              <a class="nav-link" href="views/References.html">Références</a>
             </li>
           </ul>
         </div>
