--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <body>
     <div id="fondafpa">
       <img
+        href="index.html"
         id="logo2"
         class="d-lg-none d-sm-block"
         src="assets/img/logo-afpa.webp"
@@ -34,7 +35,7 @@
       <div class="container-fluid text-center">
         <a class="navbar-brand" href="#"></a>
         <button
-          class="navbar-toggler test border border-3 collapsed"
+          class="navbar-toggler border border-3 collapsed"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -71,5 +72,17 @@
         </div>
       </div>
     </nav>
+    <p>body</p>
+    <!-- FOOTER -->
+    <!-- body doit etre flex -->
+    <!-- margin top auto pour le footer -->
+    <footer>
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-md">
+          <a class="navbar-brand" href="#">Mentions légales</a>
+          <a class="navbar-brand" href="#">Copyright</a>
+        </div>
+      </nav>
+    </footer>
   </body>
 </html>
