--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
     </nav>
     <pre>
       <p>
+        Qui sommes nous ?
+
+
         Devenu établissement public de l’État à caractère industriel et commercial (EPIC) depuis le 1er janvier 2017, l’AFPA contribue au sein du service public de l’emploi à :
 
 la formation et à la qualification des personnes les plus éloignées de l’emploi et à leur insertion sociale et professionnelle ;
@@ -121,6 +124,72 @@ Une direction générale dont le siège se situe à Montreuil ;
 L’AFPA compte 8 277 ETP.
       </p>
     </pre>
+    <!--CAROUSEL-->
+    <div id="carouselExampleCaptions" class="carousel slide">
+      <div class="carousel-indicators">
+        <button5
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button5>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="2"
+          aria-label="Slide 3"
+        ></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/img/afpa1.png" class="d-block w-100" alt="afpa1" />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Reconversion professionnelle</h5>
+            <p>Focus sur 10 métiers qui marquent...</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/afpa2.png" class="d-block w-100" alt="afpa2" />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Technicien supérieur en mpression 3D</h5>
+            <p>Un métier qui a de l'avenir</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/afpa4.jpg" class="d-block w-100" alt="afpa4" />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Vendeur en matériel de Sport</h5>
+            <p>Ce que l'Afpa vous propose avec Decathlon</p>
+          </div>
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
     <!-- FOOTER -->
     <!-- body doit etre flex -->
     <!-- margin top auto pour le footer -->
