correction lien vers page d'accueil

--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
     ></script>
     <title>Présentation Formation DWWM</title>
   </head>
+  <!--HEADER-->
   <body class="d-flex flex-column min-vh-100">
     <div id="fondafpa">
-      <img
-        href="index.html"
-        id="logo2"
-        class="d-lg-none d-sm-block"
-        src="assets/img/logo-afpa.webp"
-      />
+      <a href="../index.html">
+        <img
+          id="logo2"
+          class="d-lg-none d-sm-block"
+          src="../assets/img/logo-afpa.webp"
+        />
+      </a>
     </div>
     <nav class="navbar navbar-expand-lg barredenav">
       <div class="container-fluid text-center">
@@ -72,58 +74,6 @@
         </div>
       </div>
     </nav>
-    <pre>
-      <p>
-        Qui sommes nous ?
-
-
-        Devenu établissement public de l’État à caractère industriel et commercial (EPIC) depuis le 1er janvier 2017, l’AFPA contribue au sein du service public de l’emploi à :
-
-la formation et à la qualification des personnes les plus éloignées de l’emploi et à leur insertion sociale et professionnelle ;
-la politique de certification menée par l’État dont le ministre chargé de l’emploi ;
-l’égal accès des femmes et des hommes à la formation professionnelle et à la promotion de la
-mixité des métiers ;
-l’égal accès, sur l’ensemble du territoire, aux services publics de l’emploi et de la formation
-professionnelle.
-Missions de l’AFPA
-Au titre des missions de service public qui lui sont confiées par l’État et dans le respect des compétences des régions chargées du service public régional de la formation professionnelle, l’AFPA assure des missions de :
-
-conception et d’ingénierie des titres du ministère chargé de l’emploi (235 titres) et d’autres ministères ;
-développement d’une ingénierie de formation adaptée aux besoins permettant de répondre à l’émergence et à l’organisation de nouveaux métiers et de nouvelles compétences ;
-expertise prospective de l’évolution des compétences adaptées au marché local de l’emploi ;
-appui aux opérateurs chargés des activités de conseil en évolution professionnelle.
-En qualité d’organisme de formation, l’AFPA dispense des formations ouvertes aux demandeurs d’emploi et aux salariés pour favoriser le retour à l’emploi, l’accès à un premier emploi, et le développement des compétences pour le maintien ou l’évolution dans l’emploi.
-En 2016, l’AFPA a formé 140 000 personnes dont 80 000 demandeurs d’emploi principalement sur des formations qualifiantes et 44 500 personnes ont obtenu au titre du ministère chargé de l’emploi.
-
-Gouvernance de l’AFPA
-La gouvernance de l’AFPA se caractérise par son quadripartisme.
-
-Son conseil d’administration est composé de :
-
-9 représentants de l’État ;
-4 représentants élus des Conseils régionaux ;
-5 représentants des organisations syndicales de salariés représentatives au niveau national et interprofessionnel ;
-3 représentants des organisations professionnelles d’employeurs représentatives au niveau national et interprofessionnel ;
-2 représentants du personnel ;
-4 personnalités qualifiées.
-Le Président du conseil d’administration est nommé parmi les personnalités qualifiées.
-Le Conseil d’administration règle les affaires de l’établissement et à ce titre, il définit, notamment, les orientations stratégiques annuelles et pluriannuelles de l’agence, vote le budget initial et les comptes annuels.
-
-Afin d’assister le président du conseil d’administration et le directeur général dans la conduite de l’établissement, sont institués au sein du conseil d’administration :
-
-Un comité d’audit ;
-Un comité stratégique ;
-Un comité des nominations et des rémunérations.
-Organisation de l’AFPA
-
-Sous l’égide du directeur général, nommé par décret sur proposition conjointe des ministres de tutelle, l’organisation territoriale de l’AFPA se décline sur trois niveaux :
-
-Une direction générale dont le siège se situe à Montreuil ;
-13 directions régionales ;
-158 centres de formation répartis sur tout le territoire métropolitain. Rechercher un centre AFPA.
-L’AFPA compte 8 277 ETP.
-      </p>
-    </pre>
     <!--CAROUSEL-->
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-indicators">
