--- a/index.html
+++ b/index.html
@@ -140,9 +140,133 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+    <!--COMMENTS-->
+    <div id="div-comment-613" class="comment-body">
+      <div class="comment-author vcard">
+        <img
+          alt=""
+          src="https://secure.gravatar.com/avatar/0861d2f32b610c1abc4b5df81958af03?s=57&amp;d=mm&amp;r=g"
+          srcset="
+            https://secure.gravatar.com/avatar/0861d2f32b610c1abc4b5df81958af03?s=114&amp;d=mm&amp;r=g 2x
+          "
+          class="avatar avatar-57 photo"
+          height="57"
+          width="57"
+          loading="lazy"
+          decoding="async"
+        />
+        <cite class="fn">Anousone</cite> <span class="says">dit&nbsp;:</span>
+      </div>
+
+      <div class="comment-meta commentmetadata">
+        <p>10/09/2022 à 11:03</p>
+      </div>
+
+      <div class="commentairepage">
+        <p>Commentaire 1</p>
+      </div>
+
+      <div class="reply">
+        <a
+          rel="nofollow"
+          class="comment-reply-link"
+          href="#comment-613"
+          data-commentid="613"
+          data-postid="2299"
+          data-belowelement="div-comment-613"
+          data-respondelement="respond"
+          data-replyto="Répondre à Vivian"
+          aria-label="Répondre à Vivian"
+          >Répondre</a
+        >
+        <hr />
+      </div>
+    </div>
+
+    <!--2eme commentaire-->
+    <div id="div-comment-613" class="comment-body">
+      <div class="comment-author vcard">
+        <img
+          alt=""
+          src="https://secure.gravatar.com/avatar/0861d2f32b610c1abc4b5df81958af03?s=57&amp;d=mm&amp;r=g"
+          srcset="
+            https://secure.gravatar.com/avatar/0861d2f32b610c1abc4b5df81958af03?s=114&amp;d=mm&amp;r=g 2x
+          "
+          class="avatar avatar-57 photo"
+          height="57"
+          width="57"
+          loading="lazy"
+          decoding="async"
+        />
+        <cite class="fn">Ruslan</cite> <span class="says">dit&nbsp;:</span>
+      </div>
+
+      <div class="comment-meta commentmetadata">
+        <p>21/11/2022 à 16:17</p>
+      </div>
+
+      <div class="commentairepage">
+        <p>Commentaire 2</p>
+      </div>
+
+      <div class="reply">
+        <a
+          rel="nofollow"
+          class="comment-reply-link"
+          href="#comment-613"
+          data-commentid="613"
+          data-postid="2299"
+          data-belowelement="div-comment-613"
+          data-respondelement="respond"
+          data-replyto="Répondre à Vivian"
+          aria-label="Répondre à Vivian"
+          >Répondre</a
+        >
+        <hr />
+      </div>
+    </div>
+    <!--3eme commentaire-->
+    <div id="div-comment-613" class="comment-body">
+      <div class="comment-author vcard">
+        <img
+          alt=""
+          src="https://secure.gravatar.com/avatar/0861d2f32b610c1abc4b5df81958af03?s=57&amp;d=mm&amp;r=g"
+          srcset="
+            https://secure.gravatar.com/avatar/0861d2f32b610c1abc4b5df81958af03?s=114&amp;d=mm&amp;r=g 2x
+          "
+          class="avatar avatar-57 photo"
+          height="57"
+          width="57"
+          loading="lazy"
+          decoding="async"
+        />
+        <cite class="fn">Julien</cite> <span class="says">dit&nbsp;:</span>
+      </div>
+
+      <div class="comment-meta commentmetadata">
+        <p>14/03/2023 à 11:17</p>
+      </div>
+      <div class="commentairepage">
+        <p>Commentaire 3</p>
+      </div>
+
+      <div class="reply">
+        <a
+          rel="nofollow"
+          class="comment-reply-link"
+          href="#comment-613"
+          data-commentid="613"
+          data-postid="2299"
+          data-belowelement="div-comment-613"
+          data-respondelement="respond"
+          data-replyto="Répondre à Vivian"
+          aria-label="Répondre à Vivian"
+          >Répondre</a
+        >
+        <hr />
+      </div>
+    </div>
     <!-- FOOTER -->
-    <!-- body doit etre flex -->
-    <!-- margin top auto pour le footer -->
     <footer class="mt-auto">
       <nav class="navbar navbar-expand-lg">
         <div class="container-md">
