--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ L’AFPA compte 8 277 ETP.
       </div>
 
       <div class="commentairepage">
-        <p>Commentaire 1</p>
+        <p>Quel incroyable établissement, et quel super site internet !</p>
       </div>
 
       <div class="reply">
@@ -261,7 +261,7 @@ L’AFPA compte 8 277 ETP.
       </div>
 
       <div class="commentairepage">
-        <p>Commentaire 2</p>
+        <p>Le site de l'Afpa est super et très bien designé.</p>
       </div>
 
       <div class="reply">
@@ -302,7 +302,7 @@ L’AFPA compte 8 277 ETP.
         <p>14/03/2023 à 11:17</p>
       </div>
       <div class="commentairepage">
-        <p>Commentaire 3</p>
+        <p>Ce site est génial, rien à redire...</p>
       </div>
 
       <div class="reply">
