--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="carousel-item">
           <img src="assets/img/afpa2.png" class="d-block w-100" alt="afpa2" />
           <div class="carousel-caption d-none d-md-block">
-            <h5>Technicien supérieur en mpression 3D</h5>
+            <h5>Technicien supérieur en impression 3D</h5>
             <p>Un métier qui a de l'avenir</p>
           </div>
         </div>
