--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
     />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="assets/img/AFPA.gif"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <title>Présentation Formation DWWM</title>
+    <title>Afpa - Accueil</title>
   </head>
   <!--HEADER-->
   <body class="d-flex flex-column min-vh-100">
