centrage boutons carousel

--- a/index.html
+++ b/index.html
@@ -82,30 +82,10 @@
         </div>
       </div>
     </nav>
+    <!--FIN HEADER-->
     <!--CAROUSEL-->
     <div id="carouselExampleCaptions" class="carousel slide">
-      <div class="carousel-indicators">
-        <button5
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide-to="0"
-          class="active"
-          aria-current="true"
-          aria-label="Slide 1"
-        ></button5>
-        <button
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide-to="1"
-          aria-label="Slide 2"
-        ></button>
-        <button
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide-to="2"
-          aria-label="Slide 3"
-        ></button>
-      </div>
+      
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="assets/img/afpa1.png" class="d-block w-100" alt="afpa1" />
@@ -128,6 +108,30 @@
             <p>Ce que l'Afpa vous propose avec Decathlon</p>
           </div>
         </div>
+        <div class="text-center">
+        <div id="lesboutons" class="carousel-indicators mx-auto">
+          <button5
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button5>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+      </div>
       </div>
       <button
         class="carousel-control-prev"
@@ -148,6 +152,8 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+    <!--FIN CAROUSEL-->
+    <!--PRESENTATION AFPA-->
     <pre>
       <p>
         Qui sommes nous ?
@@ -200,7 +206,9 @@ Une direction générale dont le siège se situe à Montreuil ;
 L’AFPA compte 8 277 ETP.
       </p>
     </pre>
+    <!--FIN PRESENTATION AFPA-->
     <!--COMMENTS-->
+    <!--1er commentaire-->
     <div id="div-comment-613" class="comment-body">
       <div class="comment-author vcard">
         <img
@@ -327,6 +335,7 @@ L’AFPA compte 8 277 ETP.
       </div>
     </div>
   </body>
+  <!--FIN COMMENTS-->
     <!-- FOOTER -->
     <footer class="mt-auto">
       <nav class="navbar navbar-expand-lg">
@@ -340,5 +349,6 @@ L’AFPA compte 8 277 ETP.
         </div>
       </nav>
     </footer>
+    <!--FIN FOOTER-->
   </body>
 </html>
