--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </div>
     <!--FIN CAROUSEL-->
     <!--PRESENTATION AFPA-->
-    <pre>
+    <pre class="grostexte">
       <p>
         Qui sommes nous ?
 
