ajout bordure partie commentaires

--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@ L’AFPA compte 8 277 ETP.
     </pre>
     <!--FIN PRESENTATION AFPA-->
     <!--COMMENTS-->
+    <div id="commentaires" class="card">
     <!--1er commentaire-->
     <div id="div-comment-613" class="comment-body">
       <div class="comment-author vcard">
@@ -250,7 +251,6 @@ L’AFPA compte 8 277 ETP.
         <hr />
       </div>
     </div>
-
     <!--2eme commentaire-->
     <div id="div-comment-613" class="comment-body">
       <div class="comment-author vcard">
@@ -334,8 +334,9 @@ L’AFPA compte 8 277 ETP.
         <hr />
       </div>
     </div>
+  </div>
+    <!--FIN COMMENTS-->
   </body>
-  <!--FIN COMMENTS-->
     <!-- FOOTER -->
     <footer class="mt-auto">
       <nav class="navbar navbar-expand-lg">
